test/corpus/comments.txt
================================================================================
Line comment - simple
================================================================================

// This is a comment

--------------------------------------------------------------------------------

(source_file
  (comment
    (line_comment)))

================================================================================
Line comment - empty
================================================================================

//

--------------------------------------------------------------------------------

(source_file
  (comment
    (line_comment)))

================================================================================
Line comment - with special characters
================================================================================

// Hello! @param foo #define macro

--------------------------------------------------------------------------------

(source_file
  (comment
    (line_comment)))

================================================================================
Block comment - simple
================================================================================

/* This is a block comment */

--------------------------------------------------------------------------------

(source_file
  (comment
    (block_comment)))

================================================================================
Block comment - multiline
================================================================================

/*
 * This is a multiline
 * block comment
 */

--------------------------------------------------------------------------------

(source_file
  (comment
    (block_comment)))

================================================================================
Block comment - with asterisks
================================================================================

/*** Important ***/

--------------------------------------------------------------------------------

(source_file
  (comment
    (block_comment)))

================================================================================
Multiple comments
================================================================================

// First comment
/* Second comment */
// Third comment

--------------------------------------------------------------------------------

(source_file
  (comment
    (line_comment))
  (comment
    (block_comment))
  (comment
    (line_comment)))

================================================================================
Empty source file
================================================================================


--------------------------------------------------------------------------------

(source_file)
